--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
-Project: https://github.com/ilyakurdyukov/jpeg-quantsmooth
+Origin project: https://github.com/ilyakurdyukov/jpeg-quantsmooth
+Project: https://github.com/ImageProcessing-ElectronicPublications/libjpegqs
 
 Ilya Kurdyukov (Novosibirsk, Russia) [https://github.com/ilyakurdyukov]
-
+zvezdochiot (Moscow, Russia) [https://github.com/zvezdochiot]
